src/objects/DSCORGPKG__DiscoverOrg_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__groupId__c</fullName>
        <label>groupId</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__group__c</fullName>
        <label>group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isLegacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLegacy</label>
        <type>Checkbox</type>
    </fields>
    <label>DiscoverOrg Debug Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Metadata Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Debug Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>